style(DestinationNavBar): add text-transform: uppercase to nav element and add column-gap to list element for better spacing feat(DestinationNavBar): add padding-bottom to link element to improve visual design fix(DestinationNavBar): use usePathname hook from next/navigation to get current pathname instead of window.location.pathname to improve performance and avoid errors

--- a/src/app/styles/components/navbar/DestinationNavBar.module.scss
+++ b/src/app/styles/components/navbar/DestinationNavBar.module.scss
@@ -1,12 +1,16 @@
 .nav {
   // margin: 0 auto;
   margin-bottom: 2rem;
+  text-transform: uppercase;
 
   .list {
     display: flex;
     justify-content: center;
+    column-gap: 2.6rem;
 
 
-    .link {}
+    .link {
+      padding-bottom: .8rem;
+    }
   }
 }
